--- a/src/pages/Page.module.css
+++ b/src/pages/Page.module.css
@@ -11,12 +11,77 @@
     background-color: #8A1C7C;
     color: #8499B1;
     padding: 3em;
+    display: grid;
+    grid-template-columns: auto auto;
+    padding-bottom: 0;
 }
 
 .page .otherpage {
+    position: relative;
     background-color: #5DB7DE;
     color: #1F0322;
     padding: 3em;
+    display: grid;
+    grid-template-columns: auto auto;
+    padding-bottom: 0;
+    min-height: 20em;
+    -webkit-filter: drop-shadow(0px 5px 5px rgba(34, 34, 34, 0.315));
+}
+
+.page .onepage > div {
+    margin: auto;
+    height: min-content;
+}
+
+.page .otherpage > div {
+    margin: auto;
+    height: min-content;
+}
+
+.page .onepage img {
+    height: 20em;
+    margin: 0;
+    position: relative;
+    bottom: -2em;
+	animation: floatShadow 6s ease-in-out infinite;
+}
+
+.page .otherpage img {
+    width: 20em;
+    margin: 0;
+    position: relative;
+    bottom: 0em;
+	animation: float 6s ease-in-out infinite;
+}
+
+@keyframes float {
+	0% {
+        -webkit-filter: brightness(10) drop-shadow(0px 25px 15px #222);
+		transform: translatey(-20px);
+	}
+	50% {
+        -webkit-filter: brightness(10) drop-shadow(0px 5px 15px #222);
+		transform: translatey(0px);
+	}
+	100% {
+        -webkit-filter: brightness(10) drop-shadow(0px 25px 15px #222);
+		transform: translatey(-20px);
+	}
+}
+
+@keyframes floatShadow {
+	0% {
+        -webkit-filter: drop-shadow(0px 5px 15px #222);
+		transform: translatey(0px);
+	}
+	50% {
+        -webkit-filter: drop-shadow(0px 25px 15px #222);
+		transform: translatey(-20px);
+	}
+	100% {
+        -webkit-filter: drop-shadow(0px 5px 15px #222);
+		transform: translatey(0px);
+	}
 }
 
 .otherpage h2,.otherpage h1,.otherpage h3 {
