--- a/src/pages/Page.module.css
+++ b/src/pages/Page.module.css
@@ -7,87 +7,78 @@
     color: #8499B1;
 }
 
-.page .onepage {
-    background-color: #8A1C7C;
-    color: #8499B1;
+.page > div {
     padding: 3em;
     display: grid;
-    grid-template-columns: auto auto;
-    padding-bottom: 0;
+    grid-template-columns: 1fr 1fr;
+    min-height: 20em;
 }
 
-.page .otherpage {
+.page > div > div {
+    margin: auto;
+    height: min-content;
+    max-width: 30em;
+}
+
+.page > div:nth-child(odd){
+    background-color: #8A1C7C;
+    color: #8499B1;
+}
+
+.page > div:nth-child(odd) a{
+    color: #8499B1;
+}
+
+.page > div:nth-child(odd) h2, .page > div:nth-child(odd) h1,.page > div:nth-child(odd) h3 {
+    color: #5DB7DE;
+}
+
+.page > div:nth-child(even) {
     position: relative;
     background-color: #5DB7DE;
     color: #1F0322;
-    padding: 3em;
-    display: grid;
-    grid-template-columns: auto auto;
-    padding-bottom: 0;
-    min-height: 20em;
-    -webkit-filter: drop-shadow(0px 5px 5px rgba(34, 34, 34, 0.315));
+    filter: drop-shadow(0px 5px 5px rgba(34, 34, 34, 0.315));
 }
 
-.page .onepage > div {
-    margin: auto;
-    height: min-content;
+.page > div:nth-child(even) a{
+    color: #1F0322;
 }
 
-.page .otherpage > div {
-    margin: auto;
-    height: min-content;
+.page > div:nth-child(even) h2,.page > div:nth-child(even) h1,.page > div:nth-child(even) h3 {
+    color: #8A1C7C;
 }
 
-.page .onepage img {
-    height: 20em;
-    margin: 0;
-    position: relative;
-    bottom: -2em;
-	animation: floatShadow 6s ease-in-out infinite;
-}
-
-.page .otherpage img {
-    width: 20em;
+.page > div img {
     margin: 0;
     position: relative;
     bottom: 0em;
+    height: unset;
+    width: 20em;
 	animation: float 6s ease-in-out infinite;
+    filter: drop-shadow(0px 0px 15px #2228);
+}
+
+.page > div:nth-child(even) img {
+    animation-delay: 3s;
+}
+
+.page > div img.person {
+    width: unset;
+    height: 20em;
+    bottom: -5em;
 }
 
 @keyframes float {
 	0% {
-        -webkit-filter: brightness(10) drop-shadow(0px 25px 15px #222);
-		transform: translatey(-20px);
-	}
-	50% {
-        -webkit-filter: brightness(10) drop-shadow(0px 5px 15px #222);
-		transform: translatey(0px);
-	}
-	100% {
-        -webkit-filter: brightness(10) drop-shadow(0px 25px 15px #222);
-		transform: translatey(-20px);
-	}
-}
-
-@keyframes floatShadow {
-	0% {
-        -webkit-filter: drop-shadow(0px 5px 15px #222);
+        filter: drop-shadow(0px 0px 15px #2228);
 		transform: translatey(0px);
 	}
 	50% {
-        -webkit-filter: drop-shadow(0px 25px 15px #222);
+        filter: drop-shadow(0px 5px 15px #2228);
 		transform: translatey(-20px);
 	}
 	100% {
-        -webkit-filter: drop-shadow(0px 5px 15px #222);
+        filter: drop-shadow(0px 0px 15px #2228);
 		transform: translatey(0px);
 	}
-}
-
-.otherpage h2,.otherpage h1,.otherpage h3 {
-    color: #8A1C7C;
-}
-
-.onepage h2, .onepage h1,.onepage h3 {
-    color: #5DB7DE;
 }
