--- a/src/pages/Page.module.css
+++ b/src/pages/Page.module.css
@@ -68,6 +68,23 @@
     bottom: -5em;
 }
 
+@media only screen and (max-width: 60em) {
+    .page > div {
+        grid-template-columns: 1fr;
+    }
+
+    .page > div img {
+        height: unset;
+        width: 10em;
+    }
+
+    .page > div img.person {
+        width: unset;
+        height: 10em;
+        bottom: -5em;
+    }
+}
+
 @keyframes float {
 	0% {
         filter: drop-shadow(0px 0px 15px #2228);
