--- a/src/pages/Components/Project.module.css
+++ b/src/pages/Components/Project.module.css
@@ -6,3 +6,22 @@
 .details {
     padding: 0.5em;
 }
+
+.project {
+    display: grid;
+    grid-template-columns: auto 1fr;
+}
+.project > div {
+    padding: 1em;
+}
+
+.project > div > img.background {
+    width: 10em;
+    height: 10em;
+    object-fit: cover;
+    animation: unset;
+    margin-right: 2em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    border-radius: 25px;
+}
