--- a/src/pages/Components/Project.module.css
+++ b/src/pages/Components/Project.module.css
@@ -25,3 +25,12 @@
     margin-bottom: 1em;
     border-radius: 25px;
 }
+
+@media only screen and (max-width: 80em) {
+    .project > div > img.background {
+        width: 0;
+        height: 0;
+        margin: 0;
+        border-radius: 0;
+    }
+}
