--- a/src/pages/Page.module.css
+++ b/src/pages/Page.module.css
@@ -1,102 +1,58 @@
+@value colors: "./colors.css";
+@value primarydark, primarylight, secondarydark, secondarylight, dark from colors;
+
 .page {
     height: max-content;
     min-height: 90vh;
     margin: 0;
     text-align: left;
-    background-color: #8A1C7C;
-    color: #8499B1;
-}
-
-.page > div {
-    padding: 3em;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    min-height: 20em;
-}
-
-.page > div > div {
-    margin: auto;
-    height: min-content;
-    max-width: 50em;
-    position: relative;
+    background-color: primarydark;
+    color: primarylight;
 }
 
 .page > div:nth-child(odd){
-    background-color: #8A1C7C;
-    color: #8499B1;
+    background-color: primarydark;
+    color: primarylight;
 }
 
 .page > div:nth-child(odd) a{
-    color: #8499B1;
+    color: primarylight;
 }
 
 .page > div:nth-child(odd) h2, .page > div:nth-child(odd) h1,.page > div:nth-child(odd) h3 {
-    color: #5DB7DE;
+    color: secondarylight;
 }
 
 .page > div:nth-child(even) {
     position: relative;
-    background-color: #5DB7DE;
-    color: #1F0322;
+    background-color: secondarylight;
+    color: secondarydark;
     filter: drop-shadow(0px 5px 5px rgba(34, 34, 34, 0.315));
 }
 
-.page > div:nth-child(even) a{
-    color: #1F0322;
-}
-
 .page > div:nth-child(even) h2,.page > div:nth-child(even) h1,.page > div:nth-child(even) h3 {
-    color: #8A1C7C;
+    color: primarydark;
 }
 
-.page > div img {
-    margin: 0;
-    position: relative;
-    bottom: 0em;
-    height: unset;
-    width: 20em;
-	animation: float 6s ease-in-out infinite;
-    filter: drop-shadow(0px 0px 15px #2228);
+.page > div:nth-child(even) a{
+    color: dark;
 }
 
-.page > div:nth-child(even) img {
-    animation-delay: 3s;
+.page > div {
+    min-height: 30em;
+    padding: 2em;
 }
 
-.page > div img.person {
-    width: unset;
+.minilogo {
+    width: 20pt;
+    height: 20pt;
+    margin: 10pt;
+    object-fit: scale-down;
+    animation: unset;
+}
+
+.logo {
     height: 20em;
-    bottom: -5em;
-}
-
-@media only screen and (max-width: 60em) {
-    .page > div {
-        grid-template-columns: 1fr;
-    }
-
-    .page > div img {
-        height: unset;
-        width: 10em;
-    }
-
-    .page > div img.person {
-        width: unset;
-        height: 10em;
-        bottom: -5em;
-    }
-}
-
-@keyframes float {
-	0% {
-        filter: drop-shadow(0px 0px 15px #2228);
-		transform: translatey(0px);
-	}
-	50% {
-        filter: drop-shadow(0px 5px 15px #2228);
-		transform: translatey(-20px);
-	}
-	100% {
-        filter: drop-shadow(0px 0px 15px #2228);
-		transform: translatey(0px);
-	}
+    width: 20em;
+    object-fit: scale-down;
 }
