--- a/src/pages/Page.module.css
+++ b/src/pages/Page.module.css
@@ -43,15 +43,16 @@
     padding: 2em;
 }
 
-.minilogo {
+img.minilogo, .minilogo img {
     width: 20pt;
     height: 20pt;
     margin: 10pt;
     object-fit: scale-down;
     animation: unset;
+    filter: drop-shadow(0px 5px 5px rgba(34, 34, 34, 0.315));
 }
 
-.logo {
+.logo, .logo img {
     height: 20em;
     width: 20em;
     object-fit: scale-down;
