--- a/src/pages/Components/Me.module.css
+++ b/src/pages/Components/Me.module.css
@@ -26,3 +26,33 @@
     height: 30em;
     width: 30em;
 }
+
+.description {
+    max-width: 30em;
+}
+
+@media only screen and (max-width: 800px) {
+    .person {
+        height: 0;
+        width: 0;
+        object-fit: scale-down;
+        bottom: -3em;
+        left: 10em;
+        z-index: 0;
+        position: absolute;
+    }
+
+    .title {
+        font-size: 3em;
+        text-align: center;
+    }
+    .titleBlock {
+        width: unset;
+        height: unset;
+    }
+
+    .logos {
+        width: max-content;
+        margin: auto;
+    }
+}
