--- a/src/pages/Components/Project.module.css
+++ b/src/pages/Components/Project.module.css
@@ -34,3 +34,9 @@
         border-radius: 0;
     }
 }
+
+@media only screen and (max-width: 800px) {
+    .project > div {
+        padding: 0em;
+    }
+}
