--- a/src/pages/Grid.module.css
+++ b/src/pages/Grid.module.css
@@ -7,3 +7,10 @@
     margin: auto;
     position: relative;
 }
+
+@media only screen and (max-width: 800px) {
+    .grid {
+        display: grid; 
+        grid-template-columns: 1fr;
+    }
+}
