--- a/src/pages/Page.module.css
+++ b/src/pages/Page.module.css
@@ -57,3 +57,16 @@ img.minilogo, .minilogo img {
     width: 20em;
     object-fit: scale-down;
 }
+
+@media only screen and (max-width: 800px) {
+
+    .logo, .logo img {
+        height: 10em;
+        width: 10em;
+        object-fit: scale-down;
+    }
+
+    h1, h2, h3 {
+        font-size: 1.5em;
+    }
+}
