Update image size mobile version

--- a/src/pages/Components/Me.module.css
+++ b/src/pages/Components/Me.module.css
@@ -48,6 +48,11 @@
         position: absolute;
     }
 
+    .person img {
+        height: 0;
+        width: 0;
+    }
+
     .title {
         font-size: 3em;
         text-align: center;
