--- a/src/pages/Components/Project.module.css
+++ b/src/pages/Components/Project.module.css
@@ -24,6 +24,7 @@
     margin-top: 1em;
     margin-bottom: 1em;
     border-radius: 25px;
+    filter: grayscale(1) ;
 }
 
 @media only screen and (max-width: 80em) {
