--- a/src/pages/colors.css
+++ b/src/pages/colors.css
@@ -1,5 +1,11 @@
-@value dark: #1F0322;
+/*@value dark: #1F0322;
 @value primarydark: #8A1C7C;
 @value primarylight: #8499B1;
 @value secondarydark: #1F0322;
-@value secondarylight: #5DB7DE;
+@value secondarylight: #5DB7DE;*/
+
+@value dark: #1A1423;
+@value primarydark: #3D314A;
+@value primarylight: #997384;
+@value secondarydark: #8B6456;
+@value secondarylight: #EFC69B;
