--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@value colors: "./pages/colors.css";
+@value primarydark, primarylight, secondarydark, secondarylight, dark from colors;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: primarydark;
 }
 
 code {
