--- a/src/pages/Components/Project.module.css
+++ b/src/pages/Components/Project.module.css
@@ -1,3 +1,6 @@
+@value colors: "../colors.css";
+@value primarydark, primarylight, secondarydark, secondarylight, dark from colors;
+
 .links > div {
     display: inline;
     padding: 0.5em;
@@ -25,6 +28,26 @@
     border-radius: 25px;
     filter: grayscale(1) ;
     transition: width 0.2s, height 0.2s;
+}
+
+.project .fullImage {
+    position: fixed;
+    z-index: 2;
+    height:100%;
+    width:100%;
+    top: 0;
+    left: 0;
+    background-color: dark;
+    padding: 0;
+}
+
+.fullImage img {
+    display: block;
+    width: auto;
+    height: 90%;
+    margin: 1em auto;
+    object-fit: cover;
+    border-radius: 25px;
 }
 
 .project > div > img.background:hover {
