--- a/src/pages/colors.css
+++ b/src/pages/colors.css
@@ -6,6 +6,8 @@
 
 @value dark: #1A1423;
 @value primarydark: #3D314A;
+@value primarydarkShadow: #2D213A;
 @value primarylight: #997384;
-@value secondarydark: #8B6456;
+@value secondarydark: #5B3426;
 @value secondarylight: #EFC69B;
+@value secondarylightShadow: #CFA67B;
