--- a/src/pages/Page.module.css
+++ b/src/pages/Page.module.css
@@ -57,9 +57,18 @@
     padding: 2em;
 }
 
-img.minilogo, .minilogo img {
+img.minilogo, .minilogo img{
     width: 20pt;
     height: 20pt;
+    margin: 10pt;
+    object-fit: scale-down;
+    animation: unset;
+    filter: drop-shadow(0px 5px 5px rgba(34, 34, 34, 0.315));
+}
+
+.minilogo svg {
+    width: 5em;
+    height: 5em;
     margin: 10pt;
     object-fit: scale-down;
     animation: unset;
