--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events:none; 
+}
