--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,16 @@
 @value colors: "./pages/colors.css";
-@value primarydark, primarylight, secondarydark, secondarylight, dark from colors;
+@value primarydark, primarylight, secondarydark, secondarylight, dark, linkColor from colors;
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Manrope', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: primarydark;
+}
+
+a {
+  color: linkColor;
 }
 
 code {
