--- a/src/pages/colors.css
+++ b/src/pages/colors.css
@@ -4,10 +4,11 @@
 @value secondarydark: #1F0322;
 @value secondarylight: #5DB7DE;*/
 
-@value dark: #141C34;
-@value primarydark: #243C54;
-@value primarydarkShadow: #142C44;
-@value primarylight: #FFFFFF;
+@value dark: #231a6b;
+@value primarydark: #433a8b;
+@value primarydarkShadow: #332a7b;
+@value primarylight: #f7f7f7;
 @value secondarydark: #181F1A;
-@value secondarylight: #98DFEA;
-@value secondarylightShadow: #88CFDA;
+@value secondarylight: #f6f6f6;
+@value secondarylightShadow: #e6e6e6;
+@value linkColor: #fa6290
