--- a/src/pages/Components/Project.module.css
+++ b/src/pages/Components/Project.module.css
@@ -3,15 +3,25 @@
 
 .links > div {
     display: inline;
-    padding: 0.5em;
+    margin-right: 1em;
 }
 
 .links > .link > a {
     color: linkColor;
+    text-decoration: unset;
+    font-weight: bold;
+}
+
+.title {
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 1em;
 }
 
 .details {
-    padding: 0.5em;
+    line-height: 26px;
+    font-size: 18px;
+    margin-bottom: 1em;
 }
 
 .project {
@@ -23,15 +33,14 @@
 }
 
 .project > div > img.background {
-    width: 10em;
+    width: 20em;
     height: 10em;
     object-fit: cover;
     animation: unset;
-    margin-right: 2em;
-    margin-top: 2em;
-    border-radius: 25px;
-    filter: grayscale(1) ;
+    margin-top: 1em;
+    opacity: 0.5;
     transition: width 0.2s, height 0.2s;
+    border-radius: 5px;
 }
 
 .project .fullImage {
@@ -62,12 +71,11 @@
     height: 30%;
     margin: 1em auto;
     object-fit: cover;
-    border-radius: 25px;
 }
 
 .project > div > img.background:hover {
-    transform: scale(1.2, 1.2) ;
-    filter: none;
+    transform: scale(1.03, 1.03) ;
+    opacity: 1;
     animation-name: hover;
     animation-duration: 0.2s;
 }
@@ -77,7 +85,7 @@
         transform: scale(1, 1) ;
     }
     to {
-        transform: scale(1.2, 1.2) ;
+        transform: scale(1.03, 1.03) ;
     }
   }
 
@@ -86,7 +94,6 @@
         width: 0;
         height: 0;
         margin: 0;
-        border-radius: 0;
     }
 }
 
