--- a/src/pages/Components/Project.module.css
+++ b/src/pages/Components/Project.module.css
@@ -27,6 +27,7 @@
 .project {
     display: grid;
     grid-template-columns: auto 1fr;
+    margin-bottom: 2em;
 }
 .project > div {
     padding: 1em;
@@ -61,15 +62,6 @@
     margin: 5em auto;
 }
 
-.grid .title {
-    font-size: 7em;
-    font-weight: bold;
-    color: secondarylight;
-    filter: drop-shadow(4px 5px 10px rgba(34, 34, 34, 0.7));
-    line-height: 1em;
-    margin-bottom: 0.5em;
-}
-
 .fullImage .details {
     max-width: 30em;
     margin: auto;
@@ -92,26 +84,50 @@
     position: relative;
 }
 
+.card {
+    top: 0;
+    height: 25em;
+    width: 35em;
+    position: relative;
+    margin: auto;
+}
+
+.card > div {
+    width: 100%;
+    height: 100%;
+}
+
+.card div.title{
+    font-size: 5em;
+    font-weight: bold;
+    color: secondarylight;
+    filter: drop-shadow(4px 5px 20px rgb(0, 0, 0));
+    line-height: 1em;
+    height: min-content;
+    position: absolute;
+    padding: 0.2em;
+    width: calc(100% - 0.4em);
+    bottom: 0;
+    margin-bottom: 0.2em;
+}
+
 .fullImage .image {
     position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
     z-index: -2;
-    top: 5em;
-    left: 5em;
-    height: 30em;
-    width: 30em;
     object-fit: cover;
     margin: 0;
+    border-radius: 5px;
 }
 
 .fullImage .overlay {
     position: absolute;
     z-index: -1;
-    top: 5em;
-    left: 5em;
-    height: 30em;
-    width: 30em;
+    top: 0;
     background: rgb(0,0,0);
-    background: linear-gradient(180deg, #09004bab 0%, #160e5352 100%);
+    background: linear-gradient(180deg, #433a8b00 0%, #21186b 100%);
 }
 
 .project .fullImage .details h2, .project .fullImage .details  h1,.project .fullImage .details  h3 {
@@ -149,6 +165,36 @@
         margin: 0;
     }
 }
+
+@media only screen and (max-width: 70em) {
+
+    .grid {
+        margin-top: 1em;
+        grid-template-columns: 1fr;
+        grid-gap: 1em;
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+
+    .card {
+        height: 10em;
+        width: 100%;
+    }
+
+    .card div.title {
+        font-size: 3em;
+    }
+
+    .fullImage .details {
+        font-size: 14px;
+        line-height: 30px;
+    }
+
+    .fullImage  .details .description {
+        margin-bottom: 1em;
+    }
+}
+
 
 @media only screen and (max-width: 800px) {
     .project > div {
