--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -1,34 +1,61 @@
-@value colors: "./pages/colors.css";
-@value primarydark, primarylight, secondarydark, secondarylight, dark from colors;
-
-.Header {
-    padding-top: 1em;
-    color: white;
-    background-color: dark;
-    margin: 0;
+.main {
+    padding: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+    line-height: 1.2rem;
+    background-color: var(--darkBackground);
 }
 
-.Header ul {
-    padding-left: 0;
-    padding-right: 0;
-    display:table;
-    width: max-content;
-    height: max-content;
-    margin: auto;
+.title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    overflow: hidden;
 }
 
-.Header ul a {
-    color: white;
+.search {
+    overflow: hidden;
+}
+
+.tabs {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 2rem;
+    flex-grow: 1;
+    font-size: 14px;
+}
+
+.main a
+{
     text-decoration: none;
-    padding: 1em;
-    display:table-cell;
 }
 
-.Header ul li {
-    display:table-cell;
+.main a:hover
+{
+    color: var(--secondaryText);
 }
 
-.Header ul a:hover {
-    color: primarylight;
-    background-color: primarydark;
+@media only screen and (max-width: 60em) {
+    .tabs {
+        gap: 1rem;
+        justify-content: space-evenly;
+        flex-grow: unset;
+    }
+    .main
+    {
+        padding-left: 1rem;
+        padding-right: 1rem;
+        justify-content: start;
+    }
+
+    .search {
+        width: 0px;
+    }
 }
