--- a/src/pages/Components/Me.module.css
+++ b/src/pages/Components/Me.module.css
@@ -1,6 +1,3 @@
-@value colors: "../colors.css";
-@value primarydark, primarylight, secondarydark, secondarylight, dark, linkColor from colors;
-
 .grid {
     display: grid; 
     grid-template-columns: 1fr 1fr;
@@ -44,7 +41,7 @@
 .title {
     font-size: 7em;
     font-weight: bold;
-    color: secondarylight;
+    color: var(--secondarylight);
     filter: drop-shadow(4px 5px 10px rgba(34, 34, 34, 0.7));
     line-height: 1em;
     margin-bottom: 0.5em;
@@ -61,7 +58,7 @@ div.description {
 
 
 .description .link {
-    color: linkColor;
+    color: var(--linkColor);
 }
 
 @media only screen and (max-width: 1000px) {
