--- a/src/pages/Components/Me.module.css
+++ b/src/pages/Components/Me.module.css
@@ -1,93 +1,44 @@
-.grid {
-    display: grid; 
-    grid-template-columns: 1fr 1fr;
-    max-width: 80em;
-    margin: 0 auto;
+.main {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 2rem;
 }
 
-.grid > div {
+.mainImage {
+    max-width: 10rem;
+}
+
+.mainImage img {
     width: 100%;
-    position: relative;
+    height: auto;
 }
 
-@media only screen and (max-width: 1000px) {
-    .grid {
-        display: grid; 
-        grid-template-columns: 1fr;
+.minilogo {
+    display: block;
+    width: 2em;
+    height: 2em;
+    margin: 0 0.5em;
+}
+
+.minilogo img {
+    width: 100%;
+    height: 100%;
+}
+
+.logos {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin-top: 1em;
+    gap: 1rem;
+}
+
+
+@media only screen and (max-width: 40em) {
+    .main {
+        display: block;
     }
-}
-
-.person {
-    height: 30em;
-    width: 30em;
-    object-fit: scale-down;
-    bottom: -3em;
-    left: 9.8em;
-    z-index: 1;
-    position: absolute;
-}
-
-.person img {
-    height: 30em;
-    width: 30em;
-    object-fit: scale-down;
-}
-
-.frontTitle {
-    position: relative;
-    z-index: 1;
-}
-
-.title {
-    font-size: 7em;
-    font-weight: bold;
-    color: var(--secondarylight);
-    filter: drop-shadow(4px 5px 10px rgba(34, 34, 34, 0.7));
-    line-height: 1em;
-    margin-bottom: 0.5em;
-}
-
-.titleBlock {
-    height: 30em;
-    width: 40em;
-}
-
-div.description {
-    max-width: 30em;
-}
-
-
-.description .link {
-    color: var(--linkColor);
-}
-
-@media only screen and (max-width: 1000px) {
-    .person {
-        height: 0;
-        width: 0;
-        object-fit: scale-down;
-        bottom: -3em;
-        left: 10em;
-        z-index: 0;
-        position: absolute;
-    }
-
-    .person img {
-        height: 0;
-        width: 0;
-    }
-
-    .title {
-        font-size: 3em;
-        text-align: center;
-    }
-    .titleBlock {
-        width: unset;
-        height: unset;
-    }
-
-    .logos {
-        width: max-content;
-        margin: auto;
+    .mainImage {
+        max-width: 0rem;
     }
 }
