--- a/src/pages/Components/Project.module.css
+++ b/src/pages/Components/Project.module.css
@@ -3,7 +3,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 25em;
+    width: 20em;
     overflow: hidden;
 }
 
@@ -12,7 +12,7 @@
 }
 
 .project .image {
-    width: 25em;
+    width: 20em;
     height: 12em;
     border-top-left-radius: 1em;
     border-top-right-radius: 1em;
@@ -20,7 +20,7 @@
 }
 
 .project > div > img.background {
-    width: 25em;
+    width: 100%;
     height: 12em;
     object-fit: cover;
     filter: none ;
