--- a/src/pages/Page.module.css
+++ b/src/pages/Page.module.css
@@ -7,14 +7,14 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    position: relative;
 }
 
 .list {
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     gap: 1rem;
-    max-width: 90vw;
-    overflow-x: scroll;
+    max-width: 100%;
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
