--- a/src/pages/Components/ProjectDetails.module.css
+++ b/src/pages/Components/ProjectDetails.module.css
@@ -1,10 +1,11 @@
 .project {
     margin: 0 auto;
+    padding: 1rem;
     position: relative;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns:  1fr 30rem;
     width: 80%;
-    max-width: 40em;
+    max-width: 70em;
     overflow: hidden;
 }
 
@@ -14,22 +15,23 @@
 
 .project .image {
     margin: 0 auto;
-    width: 20em;
-    height: 12em;
-    border-top-left-radius: 1em;
-    border-top-right-radius: 1em;
+    margin-bottom: 1rem;
+    width: 30em;
+    height: max-content;
+    border-radius: 1rem;
     overflow: hidden;
 }
 
-.project > div > img.background {
+.project .image  img.background {
     width: 100%;
-    height: 12em;
+    height: 100%;
     object-fit: cover;
     filter: none ;
 }
 
 .project .title {
     font-weight: 700;
+    font-size: 2rem;
     margin-bottom: 0.5em;
 }
 
@@ -42,13 +44,16 @@
 }
 
 .project .description .details {
-    font-size: small;
     line-height: 20px;
 }
 
 @media only screen and (max-width: 80em) {
     .project {
         font-size: 0.9em;
+    }
+    .project .image {
+        width: 20em;
+        height: 12em;
     }
 }
 
